k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contentapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: contentapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contentapi-service
                port:
                  number: 8081

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: userapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: userapi-service
                port:
                  number: 8080
